--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ Assets/Scripts/Score/.idea/workspace.xml
 
 # TextMesh Pro fallback font (changes frequently)
 *Fallback.asset
+/Assets/TextMesh Pro
