--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ Assets/Scripts/Score/.idea/workspace.xml
 # TextMesh Pro fallback font (changes frequently)
 *Fallback.asset
 /Assets/TextMesh Pro
+Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Fallback.asset
